--- a/src/styles/_normalize.scss
+++ b/src/styles/_normalize.scss
@@ -14,8 +14,16 @@ html {
 }
 
 body {
-  font-family: system-ui, -apple-system, 'Segoe UI', 'Roboto', 'Helvetica',
-    'Arial', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
+  font-family:
+    system-ui,
+    -apple-system,
+    "Segoe UI",
+    "Roboto",
+    "Helvetica",
+    "Arial",
+    sans-serif,
+    "Apple Color Emoji",
+    "Segoe UI Emoji";
   margin: 0;
 }
 
@@ -39,8 +47,13 @@ code,
 kbd,
 samp,
 pre {
-  font-family: 'ui-monospace', 'SFMono-Regular', 'Consolas', 'Liberation Mono',
-    'Menlo', monospace;
+  font-family:
+    "ui-monospace",
+    "SFMono-Regular",
+    "Consolas",
+    "Liberation Mono",
+    "Menlo",
+    monospace;
   font-size: 1em;
 }
 
@@ -86,9 +99,9 @@ select {
 }
 
 button,
-[type='button'],
-[type='reset'],
-[type='submit'] {
+[type="button"],
+[type="reset"],
+[type="submit"] {
   appearance: button;
 }
 
@@ -119,7 +132,7 @@ progress {
   height: auto;
 }
 
-[type='search'] {
+[type="search"] {
   appearance: textfield;
   outline-offset: -2px;
 }
