--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,4 @@
 // Global files imported into every Vue file by Vite
 
-@import "variables";
-@import "mixins";
+@import 'variables';
+@import 'mixins';
