Update packages and linting

--- a/src/styles/_normalize.scss
+++ b/src/styles/_normalize.scss
@@ -39,7 +39,7 @@ code,
 kbd,
 samp,
 pre {
-  font-family: 'ui-monospace', 'SFMono-Regular', 'Consolas', 'Liberation Mono',
+  font-family: ui-monospace, 'SFMono-Regular', 'Consolas', 'Liberation Mono',
     'Menlo', monospace;
   font-size: 1em;
 }
